--- a/index.html
+++ b/index.html
@@ -389,13 +389,58 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                         src="nature.jpg"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">Top Netflix Series</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div  >
+                        <span class="card_tag_container">Entertainment</span>
+                    </div>
+                </div>
+            </div>
         </main>
 
     </div>
     
 </body>
 </html>
-<!-- 
 
-https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64
+<!-- https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64
 https://source.unsplash.com/random/600×400?healthy -->
